# baselink-rs

./: Cargo.toml
basesandbox/: Cargo.toml
basesandbox/src/: ipc.rs
basesandbox/src/ipc/: domain_socket2.rs  unix_socket.rs
basesandbox/tests/: intergration_test.rs
basesandbox/tests/simple/: simple.rs
module-rt/: Cargo.toml
module-rt/src/: control_loop.rs  core.rs  lib.rs  port.rs
remote-trait/: Cargo.toml
remote-trait-object/: Cargo.toml
remote-trait-object-tests/: Cargo.toml
remote-trait-object-tests/src/: key.rs  lib.rs  module.rs  module_library.rs  services.rs  test1.rs  test2.rs  transport.rs
remote-trait-object-tests/src/mod_hello/: impls.rs  mod.rs
remote-trait-object-tests/src/mod_relayer/: impls.rs  mod.rs
remote-trait-object-tests/src/mod_scheduler/: impls.rs  mod.rs
remote-trait-object-tests/src/module_library/: bootstrap.rs  context.rs  control_loop.rs  prelude.rs
remote-trait-object-tests/src/test_store/: man.rs  store.rs
remote-trait-object/macro/: Cargo.toml
remote-trait-object/macro/src/: lib.rs  service.rs  service_impl.rs
remote-trait-object/macro/src/helper/: call.rs  dispatch.rs  id.rs
remote-trait-object/macro/tests/ui/: errorful_1.rs  errorful_2.rs  errorful_3.rs
remote-trait-object/src/: context.rs  ipc.rs  lib.rs  port.rs  service.rs  tests.rs  transport.rs
remote-trait-object/src/context/: provider.rs
remote-trait-object/src/port/: client.rs  server.rs
remote-trait-object/src/service/: call.rs  dispatch.rs  export_import.rs  id.rs  remote.rs  serde_support.rs  table.rs
remote-trait-object/src/tests/: compile_test.rs  mock.rs  runtime_test.rs
remote-trait-object/src/transport/: multiplex.rs
remote-trait-tests/: Cargo.toml
remote-trait-tests/src/: key.rs  lib.rs  module.rs  module_library.rs  services.rs  test2.rs
remote-trait-tests/src/mod_hello/: impls.rs  mod.rs
remote-trait-tests/src/mod_relayer/: impls.rs  mod.rs
remote-trait-tests/src/mod_scheduler/: impls.rs  mod.rs
remote-trait-tests/src/module_library/: bootstrap.rs  context.rs  control_loop.rs
remote-trait/macro/: Cargo.toml
remote-trait/macro/src/: service.rs  service_impl.rs
remote-trait/macro/src/helper/: call.rs  dispatch.rs
remote-trait/macro/tests/ui/: errorful_1.rs  errorful_2.rs  errorful_3.rs
remote-trait/src/: context.rs  ipc.rs  lib.rs  port.rs  service.rs  tests.rs
remote-trait/src/context/: provider.rs
remote-trait/src/service/: id.rs
remote-trait/src/tests/: mock.rs
test-module-library/: Cargo.toml
test-module-library/src/: bootstrap.rs  context.rs  control_loop.rs  lib.rs  prelude.rs
