[package]
name = "codechain-module-rt"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
remote-trait-object = { path = "../remote-trait-object" }
codechain-basesandbox = { path = "../basesandbox" }
crossbeam = "0.7.3"
serde = "1.0"
serde_cbor = "0.11.1"
serde_derive = "1.0"
once_cell = "1.3.1"
parking_lot = "0.6.0"

